Fixed(bug) - user can see all buttons on mobile with scroll

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -337,10 +337,11 @@ ul {
 @media screen and (max-width: 480px) {
 	#pixiGameBoard {
 		position: absolute;
-		max-width: 100vw;
+		min-width: 100vw;
 		margin: 0 0 0 0;
 		right: 0%;
 		left: 0%;
+		max-height: 85vh;
 	}
 }
 
